// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snapshot 1`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <form
      onSubmit={[Function]}
    >
      Search
      <input
        onChange={[Function]}
        type="text"
      />
      <button
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
  <div
    className="table"
  />
  <div
    className="interactions"
  >
    <div>
      <button
        className=""
        onClick={[Function]}
        type="submit"
      >
         More
      </button>
    </div>
  </div>
</div>
`;

exports[`Button has a valid snapshot 1`] = `
<div>
  <button
    className=""
    type="submit"
  >
    Give Me More
  </button>
</div>
`;

exports[`Search has a valid snapshot 1`] = `
<form>
  Search
  <input
    type="text"
  />
  <button
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`Table has a valid snapshot 1`] = `
<div
  className="table"
>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a>
        1
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span>
      <div>
        <button
          className=""
          onClick={[Function]}
          type="submit"
        >
          Dismiss
        </button>
      </div>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a>
        2
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span>
      <div>
        <button
          className=""
          onClick={[Function]}
          type="submit"
        >
          Dismiss
        </button>
      </div>
    </span>
  </div>
</div>
`;
